# bindgen-dlpack-rs

./: Cargo.toml
src/: main.rs
